"""
gRPC API Server –¥–ª—è TranscriptionService.

–≠—Ç–æ—Ç –º–æ–¥—É–ª—å –æ—Ç–≤–µ—á–∞–µ—Ç –∑–∞ gRPC API —Å–ª–æ–π - –∑–∞–ø—É—Å–∫–∞–µ—Ç —Å–µ—Ä–≤–µ—Ä –∏ –º–∞—Ä—à—Ä—É—Ç–∏–∑–∏—Ä—É–µ—Ç –∑–∞–ø—Ä–æ—Å—ã
–∫ —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É—é—â–∏–º —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è–º –±–∏–∑–Ω–µ—Å-–ª–æ–≥–∏–∫–∏.
"""

import sys
import grpc
from concurrent import futures
import time
import logging
from pathlib import Path

# –î–æ–±–∞–≤–ª—è–µ–º –∫–æ—Ä–Ω–µ–≤—É—é –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏—é –≤ –ø—É—Ç—å –¥–ª—è –∏–º–ø–æ—Ä—Ç–æ–≤
sys.path.insert(0, str(Path(__file__).parent.parent.parent))

from generated.v1 import transcription_pb2_grpc
from services.transcription.implementations.borealis_service import BorealisTranscriptionService
from resources.config import TranscriptionServiceConfig, config


# –î–æ—Å—Ç—É–ø–Ω—ã–µ —Ä–µ–∞–ª–∏–∑–∞—Ü–∏–∏ —Å–µ—Ä–≤–∏—Å–∞
AVAILABLE_IMPLEMENTATIONS = {
    'borealis': BorealisTranscriptionService,
    # –ó–¥–µ—Å—å –º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –¥—Ä—É–≥–∏–µ —Ä–µ–∞–ª–∏–∑–∞—Ü–∏–∏:
    # 'whisper': WhisperTranscriptionService,
    # 'google-speech': GoogleSpeechTranscriptionService,
    # 'azure': AzureTranscriptionService,
}


def serve(port=None, implementation='borealis'):
    """
    –ó–∞–ø—É—Å–∫–∞–µ—Ç gRPC —Å–µ—Ä–≤–µ—Ä TranscriptionService.

    Args:
        port: –ü–æ—Ä—Ç –¥–ª—è –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏—è (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é –∏–∑ config –∏–ª–∏ 50051)
        implementation: –†–µ–∞–ª–∏–∑–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–∞ ('borealis', 'whisper', 'google-speech', –∏ —Ç.–¥.)
    """
    # –ò—Å–ø–æ–ª—å–∑—É–µ–º –ø–æ—Ä—Ç –∏–∑ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ –µ—Å–ª–∏ –Ω–µ —É–∫–∞–∑–∞–Ω
    if port is None:
        port = config.SERVER_PORT

    # –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    logging.basicConfig(
        level=getattr(logging, config.LOG_LEVEL),
        format=config.LOG_FORMAT
    )
    logger = logging.getLogger(__name__)

    # –í—ã–±–æ—Ä —Ä–µ–∞–ª–∏–∑–∞—Ü–∏–∏ —Å–µ—Ä–≤–∏—Å–∞
    if implementation not in AVAILABLE_IMPLEMENTATIONS:
        logger.error(f"–ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–∞: {implementation}")
        logger.info(f"–î–æ—Å—Ç—É–ø–Ω—ã–µ —Ä–µ–∞–ª–∏–∑–∞—Ü–∏–∏: {', '.join(AVAILABLE_IMPLEMENTATIONS.keys())}")
        return

    service_class = AVAILABLE_IMPLEMENTATIONS[implementation]
    service_impl = service_class()
    logger.info(f"–ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è: {implementation}")

    # –°–æ–∑–¥–∞–Ω–∏–µ gRPC —Å–µ—Ä–≤–µ—Ä–∞ —Å –Ω–∞—Å—Ç—Ä–æ–π–∫–∞–º–∏ –∏–∑ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏
    server = grpc.server(
        futures.ThreadPoolExecutor(max_workers=config.MAX_WORKERS),
        options=[
            ('grpc.max_send_message_length', config.MAX_SEND_MESSAGE_LENGTH),
            ('grpc.max_receive_message_length', config.MAX_RECEIVE_MESSAGE_LENGTH),
        ]
    )
    transcription_pb2_grpc.add_TranscriptionServiceServicer_to_server(service_impl, server)

    # –ü—Ä–∏–≤—è–∑–∫–∞ –∫ –ø–æ—Ä—Ç—É
    server.add_insecure_port(f'[::]:{port}')

    # –ó–∞–ø—É—Å–∫ —Å–µ—Ä–≤–µ—Ä–∞
    server.start()

    logger.info("=" * 80)
    logger.info(f"üöÄ TranscriptionService gRPC API ({implementation}) –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É {port}")
    logger.info("=" * 80)
    logger.info(f"üì° –î–æ—Å—Ç—É–ø–Ω—ã–µ –º–µ—Ç–æ–¥—ã:")
    logger.info(f"   - TranscribeAudio (—É–Ω–∞—Ä–Ω—ã–π)")
    logger.info(f"   - TranscribeAudioStream (—Å—Ç—Ä–∏–º–∏–Ω–≥–æ–≤—ã–π)")
    logger.info("=" * 80)
    logger.info("üí° –ù–∞–∂–º–∏—Ç–µ Ctrl+C –¥–ª—è –æ—Å—Ç–∞–Ω–æ–≤–∫–∏ —Å–µ—Ä–≤–µ—Ä–∞")
    logger.info("=" * 80)

    try:
        # –î–µ—Ä–∂–∏–º —Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω–Ω—ã–º
        while True:
            time.sleep(86400)  # 24 —á–∞—Å–∞
    except KeyboardInterrupt:
        logger.info("\n‚èπÔ∏è  –û—Å—Ç–∞–Ω–æ–≤–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞...")
        server.stop(0)
        logger.info("‚úÖ –°–µ—Ä–≤–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")


if __name__ == '__main__':
    # –ü–∞—Ä—Å–∏–Ω–≥ –∞—Ä–≥—É–º–µ–Ω—Ç–æ–≤ –∫–æ–º–∞–Ω–¥–Ω–æ–π —Å—Ç—Ä–æ–∫–∏
    import argparse

    parser = argparse.ArgumentParser(description='TranscriptionService gRPC API Server')
    parser.add_argument(
        '--port',
        type=int,
        default=50051,
        help='–ü–æ—Ä—Ç –¥–ª—è –ø—Ä–æ—Å–ª—É—à–∏–≤–∞–Ω–∏—è (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 50051)'
    )
    parser.add_argument(
        '--implementation',
        type=str,
        default='borealis',
        choices=list(AVAILABLE_IMPLEMENTATIONS.keys()),
        help=f'–†–µ–∞–ª–∏–∑–∞—Ü–∏—è —Å–µ—Ä–≤–∏—Å–∞ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: borealis)'
    )

    args = parser.parse_args()

    serve(port=args.port, implementation=args.implementation)
